data/derived/sp14/progs/unify/prog3068.ml.out
Characters 92-100:
  if (n / 10 == 0) then n mod 10
                        ^^^^^^^^
Error: This expression has type int but an expression was expected of type
         int list
